erDiagram
    DIM_CUSTOMERS ||--|| FACT_SUBSCRIPTIONS : has
    DIM_CUSTOMERS ||--|| FACT_USAGE : has
    DIM_CUSTOMERS ||--|| FACT_SUPPORT : has
    DIM_CUSTOMERS ||--|| FACT_CHURN : has

    DIM_CUSTOMERS {
        string customer_id PK
        date signup_date
        string region
        string industry
        string company_size
    }
    FACT_SUBSCRIPTIONS {
        string customer_id FK
        string plan_tier
        string contract_type
        float mrr
        float discount_pct
        int tenure_months
        int upsell_count
    }
    FACT_USAGE {
        string customer_id FK
        int logins_last_30_days
        int last_login_days_ago
        float feature_adoption_pct
    }
    FACT_SUPPORT {
        string customer_id FK
        int support_tickets_last_90d
        float avg_ticket_resolution_hrs
        int payment_failures_last_12mo
        int nps_score
        float csat_score
    }
    FACT_CHURN {
        string customer_id FK
        int churn_flag
        date churn_date
        string churn_reason
    }
